--- a/web/sites/zipang-casino/config/sync/views.view.game_list.yml
+++ b/web/sites/zipang-casino/config/sync/views.view.game_list.yml
@@ -46,7 +46,7 @@ display:
         type: views_query
         options:
           disable_sql_rewrite: false
-          distinct: false
+          distinct: true
           replica: false
           query_comment: ''
           query_tags: {  }
@@ -725,6 +725,7 @@ display:
         sorts: false
         title: false
         pager: false
+        query: false
       filters:
         field_game_title_value:
           id: field_game_title_value
@@ -807,46 +808,6 @@ display:
             default_group_multiple: {  }
             group_items: {  }
           entity_type: zipang_desktop_games_entity
-          entity_field: langcode
-          plugin_id: language
-        langcode_1:
-          id: langcode_1
-          table: taxonomy_term_field_data
-          field: langcode
-          relationship: field_game_tag
-          group_type: group
-          admin_label: ''
-          operator: in
-          value:
-            ja: ja
-          group: 1
-          exposed: false
-          expose:
-            operator_id: ''
-            label: ''
-            description: ''
-            use_operator: false
-            operator: ''
-            identifier: ''
-            required: false
-            remember: false
-            multiple: false
-            remember_roles:
-              authenticated: authenticated
-            reduce: false
-          is_grouped: false
-          group_info:
-            label: ''
-            description: ''
-            identifier: ''
-            optional: true
-            widget: select
-            multiple: false
-            remember: false
-            default_group: All
-            default_group_multiple: {  }
-            group_items: {  }
-          entity_type: taxonomy_term
           entity_field: langcode
           plugin_id: language
         field_game_category_target_id:
@@ -1122,6 +1083,14 @@ display:
             offset: false
             offset_label: Offset
           quantity: 9
+      query:
+        type: views_query
+        options:
+          disable_sql_rewrite: false
+          distinct: true
+          replica: false
+          query_comment: ''
+          query_tags: null
     cache_metadata:
       max-age: -1
       contexts:
@@ -1158,6 +1127,7 @@ display:
         sorts: false
         filters: false
         filter_groups: false
+        query: false
       row:
         type: data_entity
         options: {  }
@@ -1296,6 +1266,14 @@ display:
         groups:
           1: AND
       rendering_language: '***LANGUAGE_language_interface***'
+      query:
+        type: views_query
+        options:
+          disable_sql_rewrite: false
+          distinct: true
+          replica: false
+          query_comment: ''
+          query_tags: null
     cache_metadata:
       max-age: -1
       contexts:
