--- a/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.mobile_game_category.field_category_image_banner.yml
+++ b/web/sites/zipang-casino/config/sync/field.field.taxonomy_term.mobile_game_category.field_category_image_banner.yml
@@ -6,7 +6,14 @@ dependencies:
     - field.storage.taxonomy_term.field_category_image_banner
     - taxonomy.vocabulary.mobile_game_category
   module:
+    - content_translation
     - image
+third_party_settings:
+  content_translation:
+    translation_sync:
+      file: file
+      alt: '0'
+      title: '0'
 _core:
   default_config_hash: vOI7nzr-6qKDB9ml9JyFQKN93XZkEsSAQTUcW1H_VbY
 id: taxonomy_term.mobile_game_category.field_category_image_banner
