--- a/web/sites/nextbet/config/sync/core.entity_form_display.taxonomy_term.product_promotions.default.yml
+++ b/web/sites/nextbet/config/sync/core.entity_form_display.taxonomy_term.product_promotions.default.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.taxonomy_term.product_promotions.field_enable_disable
     - field.field.taxonomy_term.product_promotions.field_product_id
     - field.field.taxonomy_term.product_promotions.field_product_tag
+    - field.field.taxonomy_term.product_promotions.field_products
     - field.field.taxonomy_term.product_promotions.field_target
     - field.field.taxonomy_term.product_promotions.field_this_product_kebab
     - taxonomy.vocabulary.product_promotions
@@ -22,7 +23,7 @@ third_party_settings:
         - field_target
         - field_product_tag
       parent_name: ''
-      weight: 4
+      weight: 5
       format_type: details
       format_settings:
         id: ''
@@ -36,7 +37,7 @@ third_party_settings:
         - description
         - path
       parent_name: ''
-      weight: 5
+      weight: 6
       format_type: details
       format_settings:
         id: ''
@@ -85,6 +86,14 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: options_select
+    region: content
+  field_products:
+    weight: 4
+    settings:
+      rows: 5
+      placeholder: ''
+    third_party_settings: {  }
+    type: string_textarea
     region: content
   field_target:
     weight: 11
