--- a/web/sites/mobile-nextbet/config/sync/views.view.promotions.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.promotions.yml
@@ -493,9 +493,9 @@ display:
           entity_type: node
           entity_field: type
           plugin_id: bundle
-        langcode:
-          id: langcode
-          table: node_field_revision
+        langcode_1:
+          id: langcode_1
+          table: node_field_data
           field: langcode
           relationship: none
           group_type: group
