--- a/web/sites/mobile-nextbet/config/sync/views.view.featured_promotions.yml
+++ b/web/sites/mobile-nextbet/config/sync/views.view.featured_promotions.yml
@@ -35,7 +35,7 @@ display:
         options:
           perm: 'access content'
       cache:
-        type: tag
+        type: none
         options: {  }
       query:
         type: views_query
