--- a/web/sites/mobile-nextbet/config/sync/block.block.languagedropdownswitcher.yml
+++ b/web/sites/mobile-nextbet/config/sync/block.block.languagedropdownswitcher.yml
@@ -17,7 +17,7 @@ settings:
   id: 'language_dropdown_block:language_interface'
   label: 'Language dropdown switcher'
   provider: lang_dropdown
-  label_display: '0'
+  label_display: visible
   showall: 0
   tohome: 0
   width: '165'
