--- a/web/sites/nextbet/config/sync/config_ignore.settings.yml
+++ b/web/sites/nextbet/config/sync/config_ignore.settings.yml
@@ -1,25 +1,30 @@
 ignored_config_entities:
-  0: 'webform.webform.*'
-  2: 'system.menu.*'
-  4: 'webcomposer_config.*'
-  6: 'editor.*'
-  8: 'filter.*'
-  10: 'block.*'
-  12: 'devel.*'
-  14: 'language.*'
-  16: 'nextbet_urls.*'
-  18: 'nextbet_header_config.*'
-  20: 'webcomposer_settings.*'
-  22: 'webcomposer_affilates.*'
-  24: 'contact_us_config.*'
-  26: 'games_config.*'
-  28: 'views.view.*'
-  30: 'webcomposer_form_manager.*'
-  32: 'field.field.*'
-  34: 'webcomposer_cache.*'
-  36: 'webcomposer_download_page.*'
-  38: registration_config.general_configuration
-  39: 'field.storage.*'
-  40: '~field.field.left_floating_banner_entity.left_floating_banner_entity.field_per_product_config.*'
+  0: 'field.field.node.game.*'
+  2: 'field.field.node.games_live_dealer.*'
+  4: 'field.field.node.arcade_game.*'
+  6: 'webform.webform.*'
+  8: 'system.menu.*'
+  10: 'webcomposer_config.*'
+  12: 'editor.*'
+  14: 'filter.*'
+  16: 'block.*'
+  18: 'devel.*'
+  20: 'language.*'
+  22: 'nextbet_urls.*'
+  24: 'nextbet_header_config.*'
+  26: 'webcomposer_settings.*'
+  28: 'webcomposer_affilates.*'
+  30: 'contact_us_config.*'
+  32: 'games_config.*'
+  34: 'views.view.*'
+  36: 'webcomposer_form_manager.*'
+  38: 'field.field.*'
+  40: 'webcomposer_cache.*'
+  42: 'webcomposer_download_page.*'
+  44: registration_config.general_configuration
+  46: 'field.storage.*'
+  48: 'contact_us_config.*'
+  50: 'webcomposer_form_manager.form.contact_us_form.*'
+  52: '~field.field.left_floating_banner_entity.left_floating_banner_entity.field_per_product_config.*'
 _core:
   default_config_hash: UVH1aJ4b44UM-VdPVN7hNNuuVqfReJxwfVeDQH1Hvsk
