--- a/web/sites/mobile-nextbet/config/sync/core.extension.yml
+++ b/web/sites/mobile-nextbet/config/sync/core.extension.yml
@@ -51,6 +51,7 @@ module:
   mobile_als: 0
   mobile_arcade: 0
   mobile_config: 0
+  mobile_infobar: 0
   mobile_live_dealer: 0
   mobile_nextbet: 0
   mobile_product_menu: 0
