slider for agent players

--- a/web/sites/keno/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/keno/config/sync/core.entity_form_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_for_agent_player
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_launching
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
@@ -75,6 +76,7 @@ third_party_settings:
         - field_post_banner_blurb
         - field_post_content_position
         - field_postlogin_slider_ribbon
+        - field_enable_for_agent_player
       parent_name: ''
       weight: 5
       format_type: fieldset
@@ -89,7 +91,7 @@ third_party_settings:
         - field_status
         - field_preview_display_only
       parent_name: ''
-      weight: 8
+      weight: 9
       format_type: fieldset
       format_settings:
         label: 'Display Statuses'
@@ -103,7 +105,7 @@ third_party_settings:
         - field_available_on_desktop
         - field_available_on_tablet
       parent_name: ''
-      weight: 9
+      weight: 10
       format_type: fieldset
       format_settings:
         id: ''
@@ -256,6 +258,12 @@ content:
             selector: ''
           entity_type: webcomposer_slider_v2_entity
           bundle: webcomposer_slider_v2_entity
+    type: options_select
+    region: content
+  field_enable_for_agent_player:
+    weight: 18
+    settings: {  }
+    third_party_settings: {  }
     type: options_select
     region: content
   field_game_launching:
