--- a/web/sites/keno/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
+++ b/web/sites/keno/config/sync/core.entity_view_display.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.default.yml
@@ -11,6 +11,7 @@ dependencies:
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_banner_link_target
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_content_position
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_disable_in_tablet
+    - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_enable_for_agent_player
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_game_launching
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_log_in_state
     - field.field.webcomposer_slider_v2_entity.webcomposer_slider_v2_entity.field_post_banner_blurb
@@ -111,6 +112,13 @@ content:
       format_custom_true: ''
     third_party_settings: {  }
     type: boolean
+    region: content
+  field_enable_for_agent_player:
+    weight: 25
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
     region: content
   field_game_launching:
     weight: 16
