--- a/web/sites/nextbet/modules/custom/slider_overlay/config/install/field.field.paragraph.slider_overlay_cmi.field_slideroverlay_image.yml
+++ b/web/sites/nextbet/modules/custom/slider_overlay/config/install/field.field.paragraph.slider_overlay_cmi.field_slideroverlay_image.yml
@@ -14,8 +14,6 @@ third_party_settings:
       file: file
       alt: '0'
       title: '0'
-_core:
-  default_config_hash: n2OAzDkzGNe42uVBQ3G2XlMutijkr3KybCl7-2Q546M
 id: paragraph.slider_overlay_cmi.field_slideroverlay_image
 field_name: field_slideroverlay_image
 entity_type: paragraph
@@ -32,8 +30,8 @@ settings:
   max_filesize: ''
   max_resolution: ''
   min_resolution: ''
-  alt_field: true
-  alt_field_required: false
+  alt_field: false
+  alt_field_required: true
   title_field: false
   title_field_required: false
   default_image:
