--- a/web/sites/nextbet/config/sync/views.view.slider_overlay_rest_cmi.yml
+++ b/web/sites/nextbet/config/sync/views.view.slider_overlay_rest_cmi.yml
@@ -3,23 +3,16 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.paragraph.field_link
-    - field.storage.paragraph.field_link_target
-    - field.storage.paragraph.field_slideroverlay_blurb
-    - field.storage.paragraph.field_slideroverlay_cmi_enable
-    - field.storage.paragraph.field_slideroverlay_image
     - field.storage.slider_overlay_entity.field_product
+    - field.storage.slider_overlay_entity.field_slider_overlay_cmi
     - taxonomy.vocabulary.product
   module:
-    - link
-    - options
-    - paragraphs
+    - entity_reference_revisions
     - rest
     - rest_views
     - serialization
     - slider_overlay
     - taxonomy
-    - text
     - webcomposer_rest_extra
 _core:
   default_config_hash: i7QNZOx8UnhZql_sShDpZPzu1NxNfqNa3YwSws_UYAs
@@ -450,347 +443,16 @@ display:
     display_options:
       display_extenders: {  }
       style:
-        type: node_field_serializer
+        type: node_list_serializer
         options:
-          uses_fields: true
+          uses_fields: false
           formats:
             json: json
       path: api/slider_overlay-v2
       row:
-        type: data_field
-        options:
-          field_options:
-            field_slideroverlay_blurb_export:
-              alias: blurb
-              raw_output: false
-            field_slideroverlay_image_export:
-              alias: image
-              raw_output: false
-            field_slideroverlay_cmi_enable_export:
-              alias: enable
-              raw_output: false
-            field_link:
-              alias: link
-              raw_output: false
-            field_link_target:
-              alias: link_target
-              raw_output: false
-            field_product_export:
-              alias: product
-              raw_output: false
+        type: data_entity
+        options: {  }
       fields:
-        field_slideroverlay_blurb_export:
-          id: field_slideroverlay_blurb_export
-          table: paragraph__field_slideroverlay_blurb
-          field: field_slideroverlay_blurb_export
-          relationship: field_slider_overlay_cmi
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          field_api_classes: 0
-          plugin_id: field_export
-        field_slideroverlay_image_export:
-          id: field_slideroverlay_image_export
-          table: paragraph__field_slideroverlay_image
-          field: field_slideroverlay_image_export
-          relationship: field_slider_overlay_cmi
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: image_export
-          settings:
-            image_style: ''
-            export_alt: 1
-            export_title: false
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          field_api_classes: 0
-          plugin_id: field_export
-        field_slideroverlay_cmi_enable_export:
-          id: field_slideroverlay_cmi_enable_export
-          table: paragraph__field_slideroverlay_cmi_enable
-          field: field_slideroverlay_cmi_enable_export
-          relationship: field_slider_overlay_cmi
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: boolean_export
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          field_api_classes: 0
-          plugin_id: field_export
-        field_link:
-          id: field_link
-          table: paragraph__field_link
-          field: field_link
-          relationship: field_slider_overlay_cmi
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: uri
-          type: link
-          settings:
-            trim_length: 1024
-            url_only: true
-            url_plain: true
-            rel: '0'
-            target: '0'
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_link_target:
-          id: field_link_target
-          table: paragraph__field_link_target
-          field: field_link_target
-          relationship: field_slider_overlay_cmi
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: list_key
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
         field_product_export:
           id: field_product_export
           table: slider_overlay_entity__field_product
@@ -858,21 +520,76 @@ display:
           delta_first_last: false
           field_api_classes: 0
           plugin_id: field_export
-      defaults:
-        fields: false
-        relationships: false
-        filters: false
-        filter_groups: false
-      relationships:
         field_slider_overlay_cmi:
           id: field_slider_overlay_cmi
           table: slider_overlay_entity__field_slider_overlay_cmi
           field: field_slider_overlay_cmi
           relationship: none
           group_type: group
-          admin_label: 'field_slider_overlay_cmi: Paragraph'
-          required: false
-          plugin_id: standard
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: target_id
+          type: entity_reference_revisions_entity_view
+          settings:
+            view_mode: default
+          group_column: ''
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
+      defaults:
+        fields: false
+        relationships: false
+        filters: false
+        filter_groups: false
+        sorts: false
+      relationships: {  }
       filters:
         langcode:
           id: langcode
@@ -964,6 +681,27 @@ display:
         operator: AND
         groups:
           1: AND
+      pager:
+        type: some
+        options:
+          items_per_page: 1
+          offset: 0
+      sorts:
+        created:
+          id: created
+          table: slider_overlay_entity_field_data
+          field: created
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: DESC
+          exposed: false
+          expose:
+            label: ''
+          granularity: second
+          entity_type: slider_overlay_entity
+          entity_field: created
+          plugin_id: date
     cache_metadata:
       max-age: -1
       contexts:
@@ -973,12 +711,8 @@ display:
         - url
         - user
       tags:
-        - 'config:field.storage.paragraph.field_link'
-        - 'config:field.storage.paragraph.field_link_target'
-        - 'config:field.storage.paragraph.field_slideroverlay_blurb'
-        - 'config:field.storage.paragraph.field_slideroverlay_cmi_enable'
-        - 'config:field.storage.paragraph.field_slideroverlay_image'
         - 'config:field.storage.slider_overlay_entity.field_product'
+        - 'config:field.storage.slider_overlay_entity.field_slider_overlay_cmi'
   rest_export_slider_overlay_cmi:
     display_plugin: rest_export
     id: rest_export_slider_overlay_cmi
