--- a/web/sites/mobile-entrypage/config/sync/user.role.subadmin.yml
+++ b/web/sites/mobile-entrypage/config/sync/user.role.subadmin.yml
@@ -24,6 +24,7 @@ permissions:
   - 'access marketing script overview'
   - 'access mobile product menu overview'
   - 'access mobile sponsor list overview'
+  - 'access mobile sponsor list v2 overview'
   - 'access site in maintenance mode'
   - 'access site reports'
   - 'access taxonomy overview'
@@ -36,6 +37,7 @@ permissions:
   - 'add marketing script entities'
   - 'add mobile product menu entities'
   - 'add mobile sponsor list entities'
+  - 'add mobile sponsor list v2 entities'
   - 'add webcomposer meta entity entities'
   - 'add webcomposer slider 2.0 entity entities'
   - 'administer account settings'
@@ -47,6 +49,7 @@ permissions:
   - 'administer menu'
   - 'administer mobile product menu entities'
   - 'administer mobile sponsor list entities'
+  - 'administer mobile sponsor list v2 entities'
   - 'administer modules'
   - 'administer nodes'
   - 'administer permissions'
@@ -96,6 +99,7 @@ permissions:
   - 'delete marketing script entities'
   - 'delete mobile product menu entities'
   - 'delete mobile sponsor list entities'
+  - 'delete mobile sponsor list v2 entities'
   - 'delete own page content'
   - 'delete own promotion content'
   - 'delete page revisions'
@@ -125,6 +129,7 @@ permissions:
   - 'edit marketing script entities'
   - 'edit mobile product menu entities'
   - 'edit mobile sponsor list entities'
+  - 'edit mobile sponsor list v2 entities'
   - 'edit own page content'
   - 'edit own promotion content'
   - 'edit terms in domain'
@@ -159,6 +164,7 @@ permissions:
   - 'translate menu_link_content'
   - 'translate mobile_product_menu'
   - 'translate mobile_sponsor_list'
+  - 'translate mobile_sponsor_list_v2'
   - 'translate page node'
   - 'translate paragraph'
   - 'translate product taxonomy_term'
@@ -197,6 +203,7 @@ permissions:
   - 'view published marketing script entities'
   - 'view published mobile product menu entities'
   - 'view published mobile sponsor list entities'
+  - 'view published mobile sponsor list v2 entities'
   - 'view published webcomposer meta entity entities'
   - 'view published webcomposer slider 2.0 entity entities'
   - 'view scheduled content'
@@ -206,5 +213,6 @@ permissions:
   - 'view unpublished marketing script entities'
   - 'view unpublished mobile product menu entities'
   - 'view unpublished mobile sponsor list entities'
+  - 'view unpublished mobile sponsor list v2 entities'
   - 'view unpublished webcomposer meta entity entities'
   - 'view unpublished webcomposer slider 2.0 entity entities'
