fix sponsors v2 permissions for subadmin

--- a/web/sites/mobile-entrypage/config/sync/user.role.subadmin.yml
+++ b/web/sites/mobile-entrypage/config/sync/user.role.subadmin.yml
@@ -25,6 +25,7 @@ permissions:
   - 'access mobile product menu overview'
   - 'access mobile sponsor list overview'
   - 'access mobile sponsor list v2 overview'
+  - 'access mobile sponsor list version 2.0 overview'
   - 'access site in maintenance mode'
   - 'access site reports'
   - 'access taxonomy overview'
@@ -38,6 +39,7 @@ permissions:
   - 'add mobile product menu entities'
   - 'add mobile sponsor list entities'
   - 'add mobile sponsor list v2 entities'
+  - 'add mobile sponsor list version 2.0 entities'
   - 'add webcomposer meta entity entities'
   - 'add webcomposer slider 2.0 entity entities'
   - 'administer account settings'
@@ -50,6 +52,7 @@ permissions:
   - 'administer mobile product menu entities'
   - 'administer mobile sponsor list entities'
   - 'administer mobile sponsor list v2 entities'
+  - 'administer mobile sponsor list version 2.0 entities'
   - 'administer modules'
   - 'administer nodes'
   - 'administer permissions'
@@ -100,6 +103,7 @@ permissions:
   - 'delete mobile product menu entities'
   - 'delete mobile sponsor list entities'
   - 'delete mobile sponsor list v2 entities'
+  - 'delete mobile sponsor list version 2.0 entities'
   - 'delete own page content'
   - 'delete own promotion content'
   - 'delete page revisions'
@@ -130,6 +134,7 @@ permissions:
   - 'edit mobile product menu entities'
   - 'edit mobile sponsor list entities'
   - 'edit mobile sponsor list v2 entities'
+  - 'edit mobile sponsor list version 2.0 entities'
   - 'edit own page content'
   - 'edit own promotion content'
   - 'edit terms in domain'
@@ -204,6 +209,7 @@ permissions:
   - 'view published mobile product menu entities'
   - 'view published mobile sponsor list entities'
   - 'view published mobile sponsor list v2 entities'
+  - 'view published mobile sponsor list version 2.0 entities'
   - 'view published webcomposer meta entity entities'
   - 'view published webcomposer slider 2.0 entity entities'
   - 'view scheduled content'
@@ -214,5 +220,6 @@ permissions:
   - 'view unpublished mobile product menu entities'
   - 'view unpublished mobile sponsor list entities'
   - 'view unpublished mobile sponsor list v2 entities'
+  - 'view unpublished mobile sponsor list version 2.0 entities'
   - 'view unpublished webcomposer meta entity entities'
   - 'view unpublished webcomposer slider 2.0 entity entities'
