--- a/web/sites/mobile-entrypage/modules/custom/mobile_sponsor_list_v2/mobile_sponsor_list_v2.permissions.yml
+++ b/web/sites/mobile-entrypage/modules/custom/mobile_sponsor_list_v2/mobile_sponsor_list_v2.permissions.yml
@@ -1,22 +1,22 @@
-add mobile sponsor list v2 entities:
+add mobile sponsor list version 2.0 entities:
   title: 'Create new mobile sponsor list v2 entities'
 
-administer mobile sponsor list v2 entities:
+administer mobile sponsor list version 2.0 entities:
   title: 'Administer mobile sponsor list v2 entities'
   description: 'Allow to access the administration form to configure mobile sponsor list v2 entities.'
   restrict access: true
 
-delete mobile sponsor list v2 entities:
+delete mobile sponsor list version 2.0 entities:
   title: 'Delete mobile sponsor list v2 entities'
 
-edit mobile sponsor list v2 entities:
+edit mobile sponsor list version 2.0 entities:
   title: 'Edit mobile sponsor list v2 entities'
 
-access mobile sponsor list v2 overview:
+access mobile sponsor list version 2.0 overview:
   title: 'Access the mobile sponsor list v2 overview page'
 
-view published mobile sponsor list v2 entities:
+view published mobile sponsor list version 2.0 entities:
   title: 'View published mobile sponsor list v2 entities'
 
-view unpublished mobile sponsor list v2 entities:
+view unpublished mobile sponsor list version 2.0 entities:
   title: 'View unpublished mobile sponsor list v2 entities'
