Config sync on email issue

--- a/web/sites/nextbet/config/sync/webcomposer_settings.form_fields_filter_settings.yml
+++ b/web/sites/nextbet/config/sync/webcomposer_settings.form_fields_filter_settings.yml
@@ -327,3 +327,10 @@ webcomposer_site_maintenance__maintenance_title_arcade: 1
 webcomposer_site_maintenance__maintenance_content_arcade: 1
 webcomposer_site_maintenance__maintenance_publish_date_arcade: 1
 webcomposer_site_maintenance__maintenance_unpublish_date_arcade: 1
+mailer_configuration__mail_enable: 1
+mailer_configuration__mailer_success: 1
+mailer_configuration__mailer_error: 1
+mailer_configuration__antispam_enable: 1
+mailer_configuration__antispam_limit: 1
+mailer_configuration__antispam_interval: 1
+mailer_configuration__antispam_error: 1
